Added Unit Tests for search function